--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!--Imagem de destaque-->
         <div class="img-destaque">
             <figure>
-                <img src="C:\Users\COMPUTER\Documents\Portifolio\Udemy-exercícios\Projeto-onepage\img\silvio.jpg" alt="silvio santos rindo" >
+                <img src="../Onepage basica-HTML e CSS/img/silvio.jpg" alt="silvio santos rindo" >
                 <figcaption>Silvio encanta todos com seu carisma</figcaption>
             </figure>
         </div>
@@ -63,7 +63,7 @@
                 </div>
                 <div class="img-destaque">
                     <figure>
-                        <img src="C:\Users\COMPUTER\Documents\Portifolio\Udemy-exercícios\Projeto-onepage\img\silvio2.jpg" alt="silvio santos no palco">
+                        <img src="../Onepage basica-HTML e CSS/img/silvio2.jpg" alt="silvio santos no palco">
                             <figcaption>Silvio Santos e seu auditório</figcaption>
                     </figure>
                 </div>
